<resources>
    <string name="app_name">Carbon Crushers</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_user_name">Username</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirm_password">Confirm Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_here">Register here</string>
    <string name="action_settings">Settings</string>
    <string name="question1">Do you own a car?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question1B">Approximately how many miles did you drive in the last year?</string>
    <string name="question2">How much is your average electricity bill?</string>
    <string name="question3">Do you have natural gas for heating?</string>
    <string name="question3B">How much gas do you use per month in therms?</string>
    <string name="question4">Have you flown in the last year?</string>
    <string name="question4A">How many miles have you flown in the last year?</string>
    <string name="question5">How many square feet is your home?</string>
    <string name="question5A">How many people live in your home?</string>
    <string name="your_average">Your Average</string>
    <string name="us_average">US Average</string>
    <string name="car_usage">Car usage</string>
    <string name="gas_usage">Gas usage</string>
    <string name="electricity_usage">Electricity usage</string>
    <string name="airplane_travel">Airplane travel</string>
    <string name="home_size">Home size</string>
    <string name="submit">Submit</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="_40_000_lbs">40,000 lbs</string>
    <string name="us_average_energy_consumption">US Average Energy Consumption</string>
    <string name="home">Home</string>
    <string name="daily_log">Daily Log</string>
    <string name="logout">Logout</string>
    <string name="diet">Diet</string>
    <string name="do_you_follow_any_type_of_diet">Do you follow any type of diet?</string>
    <string name="which_of_these_diets_do_you_follow">Which of these diets do you follow?</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="keto">Keto</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="how_did_you_travel_today_and_how_far">How did you travel today and how far?</string>
    <string name="car">Car</string>
    <string name="miles">miles</string>
    <string name="bus">Bus</string>
    <string name="bicycle">Bicycle</string>
    <string name="train">Train</string>
    <string name="plane">Plane</string>
    <string name="walking">Walking</string>
    <string name="did_you_receive_your_electric_bill">Did you receive your electric bill?</string>
    <string name="how_much_electric">How much was this month\'s bill?\n(in dollars or kilowatt hours)</string>
    <string name="meat_servings">How many servings of meat did you eat today?</string>
    <string name="servings">servings</string>
    <string name="packaged_food">How much packaged food did you eat today?</string>
    <string name="meals">meals</string>
    <string name="non_local_produce">How much non-local produce did you eat today?</string>
    <string name="receive_electric_bill">Did you receive your electric bill?</string>
    <string name="kilowatt_hours">kilowatt hours</string>
    <string name="kWh">kWh</string>
    <string name="receive_gas_bill">Did you receive your gas bill?</string>
    <string name="how_much_gas">How much was this month\'s bill?\n(in dollars or therms)</string>
    <string name="therms">therms</string>
    <string name="thm">thm</string>
    <string name="update">Update</string>
    <string name="current_offset_rate">Current Offset Rate</string>
    <string name="offset_ratio">%1$d / %2$d lbs of CO2</string>
    <string name="offset_percentage">%d%% Offset</string>
    <string name="purchase_offset">Purchase\nOffset</string>
    <string name="donate_for_offset">Donate for\nOffset</string>
    <string name="offsets">Offsets</string>
    <string name="report_offset">Report\nOffset</string>
    <string name="offset">offset</string>
    <plurals name="trees">
        <item quantity="one">%d tree</item>
        <item quantity="other">%d trees</item>
    </plurals>
    <plurals name="pounds_of_carbon">
        <item quantity="one">%d lb of CO2</item>
        <item quantity="other">%d lbs of CO2</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>
    <string name="daily_log_notifications">Daily Log Notifications</string>
    <string name="change_diet">Change diet</string>
    <string name="channel_name">Reminders</string>
    <string name="channel_description">A channel for daily reminders.</string>
    <string name="summary">Summary</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="in_review">%s in Review</string>
    <string name="estimate">%sly Estimate</string>
    <string name="comparison">Comparison\n2020 / 2019</string>
</resources>
